ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - AWStats:                                              |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-08-22 Raphael Geissert
    - GUI:
        * Fixed #586: deleting domain-alias does not work when domain has ftp accounts
        * Fixed #589: wrong image names
        * Added comments support to the tr() function
        * Replaced all ISPCP with ispCP
        * Fixed #417: Add gender field
        * Fixed a missing double percent sign
        * Fixed #594: Blank page on Add Admin
    - SETUP:
        * Fixed #588: $rs not always defined
        * Added missing user_gui_props entry for primary administrator
    - CONFIGS:
        * Added postgrey, AMaViS and spamassassin to the server_ports list
    - LANGUAGES:
        * Updated es_ES.po (thanks to Albert Garcia)

2007-08-21 Raphael Geissert
    - GUI:
        * Fixed #582: FIXME: /var/www/ispcp/gui/include/calc-functions.php:61
        * Fixed an error where system information was not displayed correctly in admin/server_statistic.php
        * Improved passwords generator
    - SETUP:
        * Fixed #584: $main::db{'CONF_DIR'} is not read by vhcs2ispcp.pl Line 200
        * Fixed #583: missing semicolon in vhcs2ispcp.sql

2007-08-20 Raphael Geissert
    - GUI:
        * Fixed a SQL injection vulnerability in admin/multilanguage.php
        * Fixed #577: Undefined index: gender in admin/edit_reseller.php
        * Renamed admin/add_user.php to admin/add_admin.php
        * Dropped useless/duplicated functions
        * Some i18n improvements

2007-08-20 Geoffrey McRae (from ssl-addon branch)
    - ENGINE
        * Fixed the rest of the "SELECT *" statments