@@ -363,8 +363,8 @@ SQL_QUERY;
                             'STREET_2' => clean_input($_POST['street2']),
                             'PHONE' => clean_input($_POST['phone']),
                             'FAX' => clean_input($_POST['fax']),
-                            'VL_MALE' => ($_POST['gender'] == 'M')? 'checked' : '',
-                            'VL_FEMALE' => ($_POST['gender'] == 'F')? 'checked' : '',
+                            'VL_MALE' => (isset($_POST['gender']) && $_POST['gender'] == 'M')? 'checked' : '',
+                            'VL_FEMALE' => (isset($_POST['gender']) && $_POST['gender'] == 'F')? 'checked' : '',
 
                             'MAX_DOMAIN_COUNT' => clean_input($_POST['nreseller_max_domain_cnt']),
                             'MAX_SUBDOMAIN_COUNT' => clean_input($_POST['nreseller_max_subdomain_cnt']),
